rust/transpiler/snapshots/attributes@boolean@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/attributes/boolean.hyper
---
injections:
  - end: 17
    prefix: "from hyper import replace_markers\n\ndef Boolean("
    start: 0
    suffix: ""
    type: python
  - end: 53
    prefix: ") -> str:\n    _parts = []\n    _parts.append(f\"\"\"<button disabled=‹BOOL:{"
    start: 42
    suffix: "}›>Submit</button>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 64
    compiled_start: 47
    range_type: Python
    source_end: 17
    source_start: 0
  - compiled_end: 147
    compiled_start: 136
    range_type: Python
    source_end: 53
    source_start: 42
