rust/transpiler/snapshots/attributes@class_list@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/attributes/class_list.hyper
---
injections: []
ranges:
  - compiled_end: 64
    compiled_start: 49
    range_type: Python
    source_end: 15
    source_start: 0
