rust/transpiler/snapshots/attributes@data_aria@output.snap
---
source: transpiler/tests/golden_tests.rs
expression: r.code.trim()
input_file: transpiler/tests/attributes/data_aria.hyper
---
from hyper import replace_markers

def DataAria(is_hidden: bool) -> str:
    _parts = []
    data = {"user-id": 123, "role": "admin"}
    aria = {"label": "Close", "hidden": is_hidden}
    _parts.append(f"""<div data=‹DATA:{data}› aria=‹ARIA:{aria}›>Content</div>""")
    return replace_markers("".join(_parts))
